@@ -1,3 +1,15 @@
+2012-11-18  Laszlo Gombos  <l.gombos@samsung.com>
+
+        [Qt] Remove remaining traces of symbian
+        https://bugs.webkit.org/show_bug.cgi?id=102634
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        Remove symbian related part from the API documentation.
+
+        * Api/qgraphicswebview.cpp:
+        * Api/qwebview.cpp:
+
 2012-11-16  Kihong Kwon  <kihong.kwon@samsung.com>
 
         Add DeviceController base-class to remove duplication of DeviceXXXControler
