@@ -3,6 +3,17 @@
         Remove non-existent directories from the make system
         https://bugs.webkit.org/show_bug.cgi?id=102632
 
+        Reviewed by Kenneth Rohde Christiansen.
+
+        Remove (non-existent) symbian references from the exclude list for packaging.
+
+        * Source/cmake/WebKitPackaging.cmake:
+
+2012-11-18  Laszlo Gombos  <l.gombos@samsung.com>
+
+        Remove non-existent directories from the make system
+        https://bugs.webkit.org/show_bug.cgi?id=102632
+
         Reviewed by Adam Barth.
 
         Remove (non-existent) symbian references from the exclude list for packaging.
